Adds preliminary multi-OS Chef testing on EC2.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ rvm:
   - 1.9.3-p327 # Vagrant 1.2.2
 
 script:
-  - true
+  - cd chef
+  - bundle install
+  - bundle exec kitchen test
 
 notifications:
   email: false
