--- a/chef/.kitchen.yml
+++ b/chef/.kitchen.yml
@@ -3,19 +3,20 @@ driver_plugin: ec2
 driver_config:
   aws_access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
   aws_secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
+  flavor_id: t1.micro
   aws_ssh_key_id: vagrant
   ssh_key: <%= File.expand_path('./../keys/vagrant') %>
   availability_zone: us-east-1d
   require_chef_omnibus: 11.4.4
 
 platforms:
-- name: ubuntu-12.04
+- name: precise64
   driver_config:
-    image_id: ami-fd20ad94
+    image_id: ami-e7582d8e
     username: ubuntu
-- name: centos-6.3
+- name: centos6-64
   driver_config:
-    image_id: ami-ef5ff086
+    image_id: ami-8a8932e3
     username: ec2-user
 
 suites:
