Adds centos 6.2 support.

--- a/chef/.kitchen.yml
+++ b/chef/.kitchen.yml
@@ -16,6 +16,11 @@ platforms:
   driver_config:
     image_id: ami-e7582d8e
     username: ubuntu
+# Source: http://www.bashton.com/blog/2012/centos-6-2-ec2-ami/
+- name: centos62-64
+  driver_config:
+    image_id: ami-eece1d87
+    username: ec2-user
 # Source: http://www.bashton.com/blog/2013/updated-centos-6-3-ec2-ami/
 - name: centos63-64
   driver_config:
