--- a/chef/.kitchen.yml
+++ b/chef/.kitchen.yml
@@ -21,11 +21,11 @@ platforms:
 #  driver_config:
 #    image_id: ami-eece1d87
 #    username: ec2-user
-## Source: http://www.bashton.com/blog/2013/updated-centos-6-3-ec2-ami/
-#- name: centos63-64
-#  driver_config:
-#    image_id: ami-c53fb7ac
-#    username: ec2-user
+# Source: http://www.bashton.com/blog/2013/updated-centos-6-3-ec2-ami/
+- name: centos63-64
+  driver_config:
+    image_id: ami-c53fb7ac
+    username: ec2-user
 # Source: http://www.bashton.com/blog/2013/centos-6-4-ami-available/
 - name: centos64-64
   driver_config:
