centos64 and precise64 box only.

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ env:
 
 script:
 - cd chef && bundle install
-- bundle exec kitchen test --parallel #--destroy=always
+- bundle exec kitchen test --parallel --destroy=always
 
 branches:
   only:
