--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "boxes/precise64/aws"]
-	path = boxes/precise64/aws
+[submodule "chef/test/support/boxes/precise64/aws"]
+	path = chef/test/support/boxes/precise64/aws
 	url = https://github.com/patcon/precise64-aws.git
