--- a/chef/.kitchen.yml
+++ b/chef/.kitchen.yml
@@ -6,7 +6,7 @@ driver_config:
   # instance_type: ebs
   flavor_id: t1.micro
   aws_ssh_key_id: vagrant
-  ssh_key: <%= File.expand_path('./../keys/vagrant') %>
+  ssh_key: <%= File.expand_path('./test/support/keys/vagrant') %>
   availability_zone: us-east-1d
   require_chef_omnibus: 11.4.4
 
