--- a/chef/Rakefile
+++ b/chef/Rakefile
@@ -1,6 +1,49 @@
-begin
-  require 'kitchen/rake_tasks'
-  Kitchen::RakeTasks.new
-rescue LoadError
-  puts ">>>>> Kitchen gem not loaded, omitting tasks" unless ENV['CI']
+#!/usr/bin/env rake
+
+task :default => "foodcritic"
+
+desc "Runs foodcritic linter"
+task :foodcritic do
+  Rake::Task[:prepare_sandbox].execute
+
+  if Gem::Version.new("1.9.2") <= Gem::Version.new(RUBY_VERSION.dup)
+    sh "bundle exec foodcritic -f any #{sandbox_path}"
+  else
+    puts "WARN: foodcritic run is skipped as Ruby #{RUBY_VERSION} is < 1.9.2."
+  end
+end
+
+desc "Runs knife cookbook test"
+task :knife do
+  Rake::Task[:prepare_sandbox].execute
+
+  sh "bundle exec knife cookbook test cookbook -c test/.chef/knife.rb -o #{sandbox_path}/../"
+end
+
+desc "Runs test-kitchen tests"
+task :kitchen, :regex do |t, args|
+  # Skip if on Travis an no secure vars avail.
+  next if ENV['TRAVIS_SECURE_ENV_VARS'] == "false"
+
+  sh "bundle exec kitchen test #{args.regex} --parallel --destroy=passing"
+  sh "bundle exec kitchen list"
+
+  if ENV['CI']
+    sh "bundle exec kitchen destroy"
+  end
+
+end
+
+task :prepare_sandbox do
+  files = %w{*.md *.rb attributes definitions libraries files providers recipes resources templates}
+
+  rm_rf sandbox_path
+  mkdir_p sandbox_path
+  cp_r Dir.glob("{#{files.join(",")}}"), sandbox_path
+end
+
+private
+
+def sandbox_path
+  File.join(File.dirname(__FILE__), %w[tmp cookbooks cookbook])
 end
